# barks-compleat-digital

./: .gitignore  .justfile  .ruff.toml  .uvenv  README.md  additional_file_writing.py  bs-test.py  bs-the-payments.py  build-all.sh  building_comics.py  check_bboxes.py  comic_book.py  comics_info.py  comics_integrity.py  common-commands  compare-build-dirs.sh  compare-build.sh  compare-builds.sh  compare-fanta-image-dirs.sh  compare-images.sh  consts.py  create-clean-comic.py  create_clean_comic.py  image_io.py  out_of_date_checking.py  pages.py  panel_bounding.py  panel_bounding_boxes.py  panel_segmentation.py  pyproject.toml  read_stories.py  read_stories_and_sub_dates.py  read_sub_dates.py  remove_alias_artifacts.py  remove_alias_artifacts_win.py  rename-image-contents.sh  requirements.txt  small-build-test.sh  spelling.dic  sub-dates-os-cleaned.txt  (+10 more)
Configs/: A Christmas for Shacktown.ini  A Cold Bargain.ini  A Financial Fable.ini  Adventure "Down Under".ini  Adventure Down Under.ini  Back to Long Ago!.ini  Back to the Klondike.ini  Biceps Blues.ini  Big-Top Bedlam.ini  Big-top Bedlam.ini  Billions to Sneeze At.ini  Christmas on Bear Mountain.ini  Dangerous Disguise.ini  Darkest Africa.ini  Donald Duck's Atom Bomb.ini  Donald Duck's Worst Nightmare.ini  Donald Mines His Own Business.ini  Donald of the Coast Guard.ini  Donald's Love Letters.ini  Donald's Posy Patch.ini  Dowsing Ducks.ini  Fireman Donald.ini  Forbidden Valley.ini  Foxy Relations.ini  Frozen Gold.ini  Gladstone Returns.ini  Gladstone's Luck.ini  Going Ape.ini  Going Buggy.ini  In Ancient Persia.ini  In Old California!.ini  Jam Robbers.ini  Knightly Rivals.ini  Land Beneath the Ground!.ini  Land of the Totem Poles.ini  Letter to Santa.ini  Links Hijinks.ini  Lost in the Andes!.ini  Lost in the Andes.ini  Luck of the North.ini  (+83 more)
barks-cmds/: barks-yearly-page-count.py  (+20 more)
(+219 files in other folders)
