[project]
name = "barks-comic-building"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "barks-fantagraphics",
    "comic-utils",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.uv.sources]
comic-utils = { path = "../comic-utils", editable = true }
barks-fantagraphics = { path = "../barks-fantagraphics", editable = true }
