[project]
name = "barks-comic-building"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "barks-fantagraphics",
    "cairosvg>=2.8.2",
    "comic-utils",
    "numba>=0.61.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "vtracer>=0.6.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.uv.sources]
comic-utils = { path = "../comic-utils", editable = true }
barks-fantagraphics = { path = "../barks-fantagraphics", editable = true }
