[project]
name = "barks-comic-building"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "barks-fantagraphics",
    "bs4>=0.0.2",
    "cairosvg>=2.8.2",
    "comic-utils",
    "cpi>=2.0.7",
    "matplotlib>=3.10.5",
    "numba>=0.61.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "scikit-image>=0.25.2",
    "vtracer>=0.6.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.uv.sources]
comic-utils = { path = "../comic-utils", editable = true }
barks-fantagraphics = { path = "../barks-fantagraphics", editable = true }
